--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.5.5",
     "expo": "~52.0.17",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-collapsible": "^1.6.2",
+    "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash": "^4.17.13",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
